Bug 30952: Fix alignment of search results
Issue #11

--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -2015,7 +2015,6 @@ li {
     table {
         td {
             vertical-align: top;
-            text-align: center;
         }
     }
 
